TEST_PROGRAMS/VALID/05/array_of_slices_of_arrays_of_slices.go
/* Array of slices of arrays or slices.  */

package main

var a [10][][20][] int

func main() {
	// Do nothing.
}
