TEST_PROGRAMS/INVALID/09/blank_index_int.go
package blank_index_int

func main() {
    _ = a[_]
}
